Project Final Version

--- a/SF Salaries Exercise.ipynb
+++ b/SF Salaries Exercise.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -307,7 +307,7 @@
        "[148654 rows x 13 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -696,7 +698,7 @@
    "source": [
     "### Perfoming Operations in the Data Frame\n",
     "\n",
-    "This section shows different type of operations and data selection to work with the Data Frame that we have imported"
+    "This section shows different type of operations and data selection to work with the Data Frame."
    ]
   },
   {
@@ -818,23 +820,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/oriol/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:4: FutureWarning: \n",
+      "The current behaviour of 'Series.argmax' is deprecated, use 'idxmax'\n",
+      "instead.\n",
+      "The behavior of 'argmax' will be corrected to return the positional\n",
+      "maximum in the future. For now, use 'series.values.argmax' or\n",
+      "'np.argmax(np.array(values))' to get the position of the maximum\n",
+      "row.\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0    NATHANIEL FORD\n",
-       "Name: EmployeeName, dtype: object"
+       "Id                                                               1\n",
+       "EmployeeName                                        NATHANIEL FORD\n",
+       "JobTitle            GENERAL MANAGER-METROPOLITAN TRANSIT AUTHORITY\n",
+       "BasePay                                                     167411\n",
+       "OvertimePay                                                      0\n",
+       "OtherPay                                                    400184\n",
+       "Benefits                                                       NaN\n",
+       "TotalPay                                                    567595\n",
+       "TotalPayBenefits                                            567595\n",
+       "Year                                                          2011\n",
+       "Notes                                                          NaN\n",
+       "Agency                                               San Francisco\n",
+       "Status                                                         NaN\n",
+       "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df[\"TotalPayBenefits\"]== df[\"TotalPayBenefits\"].max()][\"EmployeeName\"]"
+    "#without argmax method\n",
+    "#df[df[\"TotalPayBenefits\"]== df[\"TotalPayBenefits\"].max()][\"EmployeeName\"]\n",
+    "\n",
+    "df.loc[df[\"TotalPayBenefits\"].argmax()]"
    ]
   },
   {
@@ -969,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +1021,7 @@
        "Name: JobTitle, Length: 2159, dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1088,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** How many Job Titles were represented by only one person in 2013? (e.g. Job Titles with only one occurence in 2013?) **"
+    "Count of how many Job Titles were represented by only one person in 2013"
    ]
   },
   {
@@ -1085,68 +1116,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** How many people have the word Chief in their job title? (This is pretty tricky) **"
+    "Count of the word \"Chief\" on JobTitle column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "423"
+       "627"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.JobTitle.str.count(\"Chief\").sum()\n"
+    "x = df.JobTitle.str.count(\"Chief\").sum()\n",
+    "\n",
+    "#good and clean method but it's missing some of the chief words due to capitalitzation of letters.\n",
+    "\n",
+    "y = df.JobTitle.str.count(\"CHIEF\").sum()\n",
+    "z = df.JobTitle.str.count(\"chief\").sum()\n",
+    "\n",
+    "total = x + y + z\n",
+    "total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "477"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#same task but with a custom method and a lambda expression, values obtained are different\n",
+    "\n",
+    "def chief_check(jobtitle):\n",
+    "    if \"chief\" in jobtitle.lower().split():\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "sum(df[\"JobTitle\"].apply(lambda x: chief_check(x)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Bonus: Is there a correlation between length of the Job Title string and Salary? **"
+    "Study the correlation between length of the Job Title string and Salary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>title_len</th>\n",
+       "      <th>JobLenght</th>\n",
        "      <th>TotalPayBenefits</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>title_len</th>\n",
+       "      <td>JobLenght</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>-0.036878</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>TotalPayBenefits</th>\n",
+       "      <td>TotalPayBenefits</td>\n",
        "      <td>-0.036878</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
@@ -1155,23 +1230,30 @@
        "</div>"
       ],
       "text/plain": [
-       "                  title_len  TotalPayBenefits\n",
-       "title_len          1.000000         -0.036878\n",
+       "                  JobLenght  TotalPayBenefits\n",
+       "JobLenght          1.000000         -0.036878\n",
        "TotalPayBenefits  -0.036878          1.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#First create a new column for the lenght of the Job Title string\n",
+    "\n",
+    "df[\"JobLenght\"] = df[\"JobTitle\"].apply(len)\n",
+    "\n",
+    "#Apply the corr method to the columns we are interested\n",
+    "df[[\"JobLenght\",\"TotalPayBenefits\"]].corr()\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Great Job!"
+    "Conclusion: There is no correlation."
    ]
   }
  ],
